# cost_aware_momentum

./: .env.example  .gitignore  CHANGELOG.md  Makefile  PATCH_1.1.2.md  PATCH_1.1.3.md  PATCH_1.10.0.md  PATCH_1.11.0.md  PATCH_1.12.0.md  PATCH_1.13.0.md  PATCH_1.14.0.md  PATCH_1.15.0.md  PATCH_1.16.0.md  PATCH_1.17.0.md  PATCH_1.18.0.md  PATCH_1.19.0.md  PATCH_1.2.0.md  PATCH_1.2.1.md  PATCH_1.2.2.md  PATCH_1.20.0.md  PATCH_1.21.0.md  PATCH_1.22.0.md  PATCH_1.23.0.md  PATCH_1.24.0.md  PATCH_1.25.0.md  PATCH_1.26.2.md  PATCH_1.26.3.md  PATCH_1.26.4.md  PATCH_1.26.5.md  PATCH_1.26.6.md  PATCH_1.26.7.md  PATCH_1.27.0.md  PATCH_1.28.0.md  PATCH_1.28.1.md  PATCH_1.28.2.md  PATCH_1.3.0.md  PATCH_1.34.0.md  PATCH_1.34.1.md  PATCH_1.34.2.md  PATCH_1.35.0.md  (+80 more)
app/: __init__.py  asyncio_compat.py  config.py  json_utils.py  logging.py  main.py
cost_aware_momentum.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
docs/: ARCHITECTURE.md  AUDIT_2026-07-07_HISTORICAL_DYNAMIC_BOOTSTRAP_RU.md  AUDIT_REPORT_1.35.4.md  CONFIGURATION.md  INCIDENT_RUNBOOK.md  ITERATION_REPORT_2026-06-28-atomic-model-promotion.md  ITERATION_REPORT_2026-06-28-directional-geometry.md  ITERATION_REPORT_2026-06-28-hourly-continuity.md  ITERATION_REPORT_2026-06-28-label-end-temporal-purge.md  ITERATION_REPORT_2026-06-28-log-loss-class-order.md  ITERATION_REPORT_2026-06-28-manual-fill-chronology.md  ITERATION_REPORT_2026-06-28-model-artifact-reconciliation.md  ITERATION_REPORT_2026-06-28-model-artifact-recovery.md  ITERATION_REPORT_2026-06-28-model-bootstrap-recovery.md  ITERATION_REPORT_2026-06-28-model-registry-json-safety.md  ITERATION_REPORT_2026-06-28-plan-outcome-input-validation.md  ITERATION_REPORT_2026-06-28-release-integrity.md  ITERATION_REPORT_2026-06-28-risk-input-validation.md  (+120 more)
(+240 files in other folders)
