[build-system]
requires = ["setuptools>=75", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "cost-aware-momentum"
version = "1.8.32"
description = "Human-in-the-loop cost-aware hourly ML momentum advisory terminal for Bybit linear USDT perpetuals"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.128,<1",
  "uvicorn[standard]>=0.34,<1",
  "pydantic>=2.11,<3",
  "pydantic-settings>=2.8,<3",
  "sqlalchemy>=2.0.40,<2.2",
  "psycopg[binary,pool]>=3.2,<4",
  "alembic>=1.16,<1.19",
  "httpx>=0.28,<0.29",
  "numpy>=2.1,<3",
  "pandas>=2.2,<3",
  "scikit-learn>=1.6,<2",
  "joblib>=1.4,<2",
  "python-multipart>=0.0.20,<1",
  "orjson>=3.10,<4",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.3,<10",
  "pytest-asyncio>=0.25,<1",
  "pytest-cov>=6,<7",
  "ruff>=0.9,<1",
  "mypy>=1.14,<2",
]

[project.scripts]
cam-api = "app.main:run"
cam-worker = "app.workers.runner:run"
cam-trainer = "app.workers.trainer:run"
cam-train = "scripts.train:main"
cam-backtest = "scripts.backtest:main"
cam-daily-report = "scripts.daily_report:main"
cam-replay = "scripts.replay:main"
cam-run = "scripts.run_local:main"
cam-doctor = "scripts.doctor:main"
cam-db-init = "scripts.db_init:main"
cam-backup = "scripts.backup:main"
cam-restore-check = "scripts.restore_check:main"
cam-model-registry = "scripts.model_registry:main"

[tool.setuptools.packages.find]
include = ["app*", "scripts*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
  "integration: requires PostgreSQL",
]

[tool.ruff]
line-length = 110
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]
